--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,17 @@
+# File&Cache
 .DS_Store
 node_modules/
-/dist/
+dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/test/unit/coverage/
-/test/e2e/reports/
+test/unit/coverage
+test/e2e/reports
 selenium-debug.log
+doc/
+.sass-cache/
+undefined/
+temp/
 
 # Editor directories and files
 .idea
