--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "npx rollup -c",
     "test": "jest",
     "docs": "npx typedoc --out docs/ src/",
-    "release": "npm run build && npm run docs && npm publish",
+    "release": "npm run build && npm publish",
     "lint-and-fix": "eslint ./src/index.ts --ext 'ts,tsx' --fix",
     "check-health": "npm run build && npm run docs && npm run test"
   },
