--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mazey-wordpress-utils",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "WordPress utilities.",
   "main": "lib/index.cjs.js",
   "module": "lib/index.esm.js",
@@ -10,10 +10,9 @@
     "dev": "webpack-dev-server --open",
     "build": "npx rollup -c",
     "test": "jest",
-    "docs": "npx typedoc --out docs/ src/",
     "release": "npm run build && npm publish",
     "lint-and-fix": "eslint ./src/index.ts --ext 'ts,tsx' --fix",
-    "check-health": "npm run build && npm run docs && npm run test"
+    "check-health": "npm run build && npm run test"
   },
   "repository": {
     "type": "git",
