style: format function params
Update package.json and src/index.ts

--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "url": "git+https://github.com/mazeyqian/mazey-wordpress-utils.git"
   },
   "keywords": [
-    "JavaScript",
-    "Function"
+    "wordpress",
+    "utilities",
+    "lazyload",
+    "javascript",
+    "function"
   ],
-  "author": "MazeyQian",
+  "author": "Cheng",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/mazeyqian/mazey-wordpress-utils/issues"
