feat(header): set lazy loading
Set images' lazy loading after page's loading

Refactor code and optimize performance

Close #8

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -68,7 +68,7 @@
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
   },
   "include": [
-    "src/**/*.ts",
+    "src/index.ts",
     "typing.d.ts"
   ]
 }
