--- a/package.json
+++ b/package.json
@@ -59,7 +59,9 @@
     "prettier-eslint-cli": "5.0.0",
     "rollup": "1.31.1",
     "rollup-plugin-babel": "4.3.3",
+    "rollup-plugin-cleaner": "^1.0.0",
     "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "0.27.2",
     "ts-loader": "8.0.2",
     "typedoc": "0.18.0",
@@ -77,6 +79,6 @@
   "dependencies": {
     "@babel/runtime-corejs3": "7.11.2",
     "core-js": "3.6.5",
-    "mazey": "^3.6.6"
+    "mazey": "^3.11.5"
   }
 }
