--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mazey-wordpress-utils",
-  "version": "1.2.3",
+  "version": "1.3.0",
   "description": "WordPress utilities.",
   "main": "lib/index.cjs.js",
   "module": "lib/index.esm.js",
@@ -81,6 +81,7 @@
   },
   "dependencies": {
     "@babel/runtime-corejs3": "7.11.2",
+    "copy-to-clipboard": "^3.3.3",
     "core-js": "3.6.5",
     "mazey": "^3.11.5"
   }
